--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+<!--
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    -->
     <link rel="stylesheet" href="bower_components/ionic/release/css/ionic.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -18,23 +17,44 @@
 </head>
 <body ng-app="test3App">
 
-<!-- Add your site or application content here -->
-<div class="container">
-    <div class="header">
-        <ul class="nav nav-pills pull-right">
-            <li class="active"><a ng-href="#">Home</a></li>
-            <li><a ng-href="#">About</a></li>
-            <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">test3</h3>
-    </div>
+<!-- Center content -->
 
-    <div ng-include="'views/calculator.html'" ></div>
 
-    <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-    </div>
-</div>
+<ion-side-menus>
+
+    <ion-side-menu-content>
+        <ion-nav-bar class="bar-stable nav-title-slide-ios7">
+            <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i> Back</ion-nav-back-button>
+        </ion-nav-bar>
+        <ion-content  animation="slide-left-right">
+            <div ng-include="'views/calculator.html'" ></div>
+        </ion-content>
+    </ion-side-menu-content>
+
+    <ion-side-menu side="left"  expose-aside-when="large">
+        <ion-header-bar class="bar bar-header bar-stable">
+            <h1 class="title">Menu</h1>
+        </ion-header-bar>
+        <ion-content class="has-header">
+            <ion-list>
+                <ion-item nav-clear menu-close ng-click="login()">
+                    Login
+                </ion-item>
+                <ion-item nav-clear menu-close href="#/app/search">
+                    Search
+                </ion-item>
+                <ion-item nav-clear menu-close href="#/app/browse">
+                    Browse
+                </ion-item>
+                <ion-item nav-clear menu-close href="#/app/playlists">
+                    Playlists
+                </ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-side-menu>
+</ion-side-menus>
+
+
 
 
 <!-- build:js(.) scripts/oldieshim.js -->
