--- a/app/index.html
+++ b/app/index.html
@@ -22,19 +22,19 @@
 
 <ion-side-menus>
 
-    <ion-side-menu-content>
+    <ion-pane ion-side-menu-content>
         <ion-nav-bar class="bar-stable nav-title-slide-ios7">
             <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i> Back</ion-nav-back-button>
         </ion-nav-bar>
         <ion-content  animation="slide-left-right">
             <div ng-include="'views/calculator.html'" ></div>
         </ion-content>
-    </ion-side-menu-content>
+    </ion-pane>
 
     <ion-side-menu side="left"  expose-aside-when="large">
-        <ion-header-bar class="bar bar-header bar-stable">
+        <header class="bar bar-header bar-stable">
             <h1 class="title">Menu</h1>
-        </ion-header-bar>
+        </header>
         <ion-content class="has-header">
             <ion-list>
                 <ion-item nav-clear menu-close ng-click="login()">
