--- a/app/index.html
+++ b/app/index.html
@@ -38,19 +38,19 @@
         </header>
         <ion-content class="has-header">
             <ion-list>
-                <ion-item nav-clear menu-close href="/calculator/reverse-polish">
+                <ion-item nav-clear menu-close href="#/calculator/reverse-polish">
                     Reverse Polish
                 </ion-item>
-                <ion-item nav-clear menu-close href="/calculator/basic">
+                <ion-item nav-clear menu-close href="#/calculator/basic">
                     Basic
                 </ion-item>
-                <ion-item nav-clear menu-close href="/calculator/scientific">
+                <ion-item nav-clear menu-close href="#/calculator/scientific">
                     Scientific
                 </ion-item>
-                <ion-item nav-clear menu-close href="/calculator/wolfram">
+                <ion-item nav-clear menu-close href="#/calculator/wolfram">
                     Wolfram
                 </ion-item>
-                <ion-item nav-clear menu-close href="/calculator/wind">
+                <ion-item nav-clear menu-close href="#/calculator/wind">
                     Wind
                 </ion-item>
             </ion-list>
